<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sale_favorite"
        android:icon="@drawable/ic_star_outline_white_24dp"
        android:title="@string/action_sale_in_favorite"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_sale_crop"
        android:icon="@drawable/ic_crop_white_24dp"
        android:title="@string/action_sale_crop"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_sale_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_sale_share"
        app:showAsAction="ifRoom">
    </item>
</menu>