<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_app_name"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_app_version"
            android:id="@+id/textView2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionName"
            android:id="@+id/textView6"
            android:layout_marginLeft="3dp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_app_developer"
        android:id="@+id/textView3"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_app_description"
        android:id="@+id/textView4"
        android:layout_marginBottom="16dp"
        android:textSize="16sp" />
</LinearLayout>